Bug 556493 - No click fired when mousedown on the text of an element and mouseup on empty area, r=jst